<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MiniYelp</string>
    <string name="find">Find nearby restaurants</string>
    <string name="city">City</string>
    <string name="city_hint">Enter a city</string>
    <string name="categories">Categories</string>
    <string name="categories_hint">Enter one or more categories</string>
    <string name="cost">Cost</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="day">Day</string>
    <string-array name="day_array">
        <item></item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="day_prompt">Select a day</string>
    <string name="search_time">Search by time</string>
    <string name="time">Time</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="search_results">Search Results</string>
    <string name="hello_world">Hello world!</string>

</resources>
