<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context=".SearchActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:layout_marginTop="6dp">
        <TextView
            android:text="@string/find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:text="@string/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"/>
            <EditText
                android:id = "@+id/cityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/city_hint" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:text="@string/categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"/>
                <LinearLayout
                    android:id="@+id/category_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <EditText
                    android:id="@+id/category_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:hint="@string/categories_hint" />
                </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"/>
            <Button
                android:id="@+id/remove_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:text="@string/cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp" />
            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="3"
                android:stepSize="1.0"
                android:rating="1.0" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:textSize="24sp" />
            <Spinner
                android:id="@+id/daySpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/day_array"
                android:prompt="@string/day_prompt"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/time_picker_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:text="@string/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp" />
            <TimePicker
                android:id="@+id/time_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TimePicker>
        </LinearLayout>
        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:onClick="startQuery" />
    </LinearLayout>
</ScrollView>